Bug 346412 - K3B Crash on write start
Summary: K3B Crash on write start
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-04-20 21:11 UTC by David Pyke
Modified: 2016-09-12 09:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Pyke 2015-04-20 21:11:43 UTC
Application: k3b (2.0.3)
KDE Platform Version: 4.14.6
Qt Version: 4.8.6
Operating System: Linux 3.19.3 x86_64
Distribution: Ubuntu 15.04

-- Information about the crash:
- What I was doing when the application crashed:
I had selected files for copying to a data cd session.  I had pressed the burn button when the program crashed.
- Custom settings of the application:
cdrecord not installed.

-- Backtrace:
Application: K3b (k3b), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fd042006840 (LWP 1417))]

Thread 5 (Thread 0x7fd02363f700 (LWP 1418)):
#0  __lll_unlock_wake () at ../sysdeps/unix/sysv/linux/x86_64/lowlevellock.S:371
#1  0x00007fd035b3b3f0 in __pthread_mutex_unlock_usercnt (decr=1, mutex=0x7fd036090a50) at pthread_mutex_unlock.c:57
#2  __GI___pthread_mutex_unlock (mutex=0x7fd036090a50) at pthread_mutex_unlock.c:315
#3  0x00007fd035e060b9 in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#4  0x00007fd035e0a08b in ?? () from /usr/lib/x86_64-linux-gnu/libGL.so.1
#5  0x00007fd031890fc0 in ?? () from /usr/lib/x86_64-linux-gnu/tls/libnvidia-tls.so.346.47
#6  0x00007fd03693a2f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007fd0368f696c in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007fd0368f6e60 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007fd0368f6fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007fd03ca9082e in QEventDispatcherGlib::processEvents (this=0x7fd01c0008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#11 0x00007fd03ca5fcd1 in QEventLoop::processEvents (this=this@entry=0x7fd02363ed40, flags=...) at kernel/qeventloop.cpp:149
#12 0x00007fd03ca60035 in QEventLoop::exec (this=this@entry=0x7fd02363ed40, flags=...) at kernel/qeventloop.cpp:204
#13 0x00007fd03c953e89 in QThread::exec (this=this@entry=0x292d770) at thread/qthread.cpp:538
#14 0x00007fd03ca40443 in QInotifyFileSystemWatcherEngine::run (this=0x292d770) at io/qfilesystemwatcher_inotify.cpp:265
#15 0x00007fd03c9566ff in QThreadPrivate::start (arg=0x292d770) at thread/qthread_unix.cpp:349
#16 0x00007fd035b376aa in start_thread (arg=0x7fd02363f700) at pthread_create.c:333
#17 0x00007fd03b390eed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fd01b7fe700 (LWP 1438)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:238
#1  0x00007fd03c9551da in thread_sleep (ti=ti@entry=0x7fd01b7fdd70) at thread/qthread_unix.cpp:492
#2  0x00007fd03c9559e3 in QThread::sleep (secs=secs@entry=2) at thread/qthread_unix.cpp:506
#3  0x00007fd0418c4aed in K3b::MediaCache::PollThread::run (this=0x2ab17b0) at /build/buildd/k3b-2.0.3/libk3b/tools/k3bmediacache.cpp:106
#4  0x00007fd03c9566ff in QThreadPrivate::start (arg=0x2ab17b0) at thread/qthread_unix.cpp:349
#5  0x00007fd035b376aa in start_thread (arg=0x7fd01b7fe700) at pthread_create.c:333
#6  0x00007fd03b390eed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fd01a155700 (LWP 1458)):
#0  0x00007fd03b3858dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fd0368f6ebc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fd0368f6fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fd03ca9082e in QEventDispatcherGlib::processEvents (this=0x7fd0100008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#4  0x00007fd03ca5fcd1 in QEventLoop::processEvents (this=this@entry=0x7fd01a154d40, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fd03ca60035 in QEventLoop::exec (this=this@entry=0x7fd01a154d40, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fd03c953e89 in QThread::exec (this=this@entry=0x3032f90) at thread/qthread.cpp:538
#7  0x00007fd03ca40443 in QInotifyFileSystemWatcherEngine::run (this=0x3032f90) at io/qfilesystemwatcher_inotify.cpp:265
#8  0x00007fd03c9566ff in QThreadPrivate::start (arg=0x3032f90) at thread/qthread_unix.cpp:349
#9  0x00007fd035b376aa in start_thread (arg=0x7fd01a155700) at pthread_create.c:333
#10 0x00007fd03b390eed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fd019327700 (LWP 1468)):
#0  0x00007fd0368f3ed7 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fd0368f67ef in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fd0368f6e60 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fd0368f6fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fd03ca9082e in QEventDispatcherGlib::processEvents (this=0x7fd0040008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#5  0x00007fd03ca5fcd1 in QEventLoop::processEvents (this=this@entry=0x7fd019326d40, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fd03ca60035 in QEventLoop::exec (this=this@entry=0x7fd019326d40, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fd03c953e89 in QThread::exec (this=this@entry=0x2d28ba0) at thread/qthread.cpp:538
#8  0x00007fd03ca40443 in QInotifyFileSystemWatcherEngine::run (this=0x2d28ba0) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00007fd03c9566ff in QThreadPrivate::start (arg=0x2d28ba0) at thread/qthread_unix.cpp:349
#10 0x00007fd035b376aa in start_thread (arg=0x7fd019327700) at pthread_create.c:333
#11 0x00007fd03b390eed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fd042006840 (LWP 1417)):
[KCrash Handler]
#6  size (this=0x20) at ../../include/QtCore/../../src/corelib/tools/qlist.h:98
#7  size (this=0x20) at ../../include/QtCore/../../src/corelib/tools/qlist.h:137
#8  QtPrivate::QStringList_contains (that=0x20, str=..., cs=cs@entry=Qt::CaseSensitive) at tools/qstringlist.cpp:316
#9  0x00007fd0418923c2 in contains (cs=Qt::CaseSensitive, str=..., this=<optimized out>) at /usr/include/qt4/QtCore/qstringlist.h:174
#10 K3b::ExternalBin::hasFeature (this=<optimized out>, f=...) at /build/buildd/k3b-2.0.3/libk3b/core/k3bexternalbinmanager.cpp:77
#11 0x00007fd041946e7b in K3b::DataJob::waitForBurnMedium (this=this@entry=0x3331430) at /build/buildd/k3b-2.0.3/libk3b/projects/datacd/k3bdatajob.cpp:818
#12 0x00007fd041948481 in K3b::DataJob::prepareWriterJob (this=0x3331430) at /build/buildd/k3b-2.0.3/libk3b/projects/datacd/k3bdatajob.cpp:676
#13 0x00007fd041943a2e in K3b::DataJob::startOnTheFlyWriting (this=0x3331430) at /build/buildd/k3b-2.0.3/libk3b/projects/datacd/k3bdatajob.cpp:267
#14 0x00007fd041948da6 in K3b::DataJob::slotIsoImagerFinished (this=0x3331430, success=<optimized out>) at /build/buildd/k3b-2.0.3/libk3b/projects/datacd/k3bdatajob.cpp:358
#15 0x00007fd03ca7619c in QMetaObject::activate (sender=sender@entry=0x336ac90, m=m@entry=0x7fd041c01440 <K3b::Job::staticMetaObject>, local_signal_index=local_signal_index@entry=11, argv=argv@entry=0x7ffcb84921f0) at kernel/qobject.cpp:3567
#16 0x00007fd041898422 in K3b::Job::finished (this=this@entry=0x336ac90, _t1=_t1@entry=true) at /build/buildd/k3b-2.0.3/obj-x86_64-linux-gnu/libk3b/k3bjob.moc:218
#17 0x00007fd041898b23 in K3b::Job::jobFinished (this=0x336ac90, success=<optimized out>) at /build/buildd/k3b-2.0.3/libk3b/core/k3bjob.cpp:129
#18 0x00007fd04195bd62 in K3b::IsoImager::slotMkisofsPrintSizeFinished (this=this@entry=0x336ac90) at /build/buildd/k3b-2.0.3/libk3b/projects/datacd/k3bisoimager.cpp:367
#19 0x00007fd04195da48 in K3b::IsoImager::qt_static_metacall (_o=0x336ac90, _id=<optimized out>, _a=0x7ffcb8492450, _c=<optimized out>) at /build/buildd/k3b-2.0.3/obj-x86_64-linux-gnu/libk3b/k3bisoimager.moc:92
#20 0x00007fd03ca7619c in QMetaObject::activate (sender=sender@entry=0x2f5d010, m=m@entry=0x7fd041c05700 <K3bQProcess::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffcb8492450) at kernel/qobject.cpp:3567
#21 0x00007fd0418ca0df in K3bQProcess::finished (this=this@entry=0x2f5d010, _t1=0, _t2=QProcess::NormalExit) at /build/buildd/k3b-2.0.3/obj-x86_64-linux-gnu/libk3b/moc_k3bqprocess.cpp:161
#22 0x00007fd0418ce89a in K3bQProcessPrivate::_q_notifyProcessDied (this=0x334a8d0) at /build/buildd/k3b-2.0.3/libk3b/tools/qprocess/k3bqprocess.cpp:762
#23 0x00007fd0418cea29 in K3bQProcess::qt_static_metacall (_o=0x2f5d010, _id=<optimized out>, _a=0x7ffcb84925e0, _c=<optimized out>) at /build/buildd/k3b-2.0.3/obj-x86_64-linux-gnu/libk3b/moc_k3bqprocess.cpp:95
#24 0x00007fd03ca7619c in QMetaObject::activate (sender=sender@entry=0x3281610, m=m@entry=0x7fd03cdc6c00 <QSocketNotifier::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffcb84925e0) at kernel/qobject.cpp:3567
#25 0x00007fd03cac34fe in QSocketNotifier::activated (this=this@entry=0x3281610, _t1=38) at .moc/release-shared/moc_qsocketnotifier.cpp:102
#26 0x00007fd03ca7f40b in QSocketNotifier::event (this=0x3281610, e=0x7ffcb84928b0) at kernel/qsocketnotifier.cpp:316
#27 0x00007fd03bb2b9bc in QApplicationPrivate::notify_helper (this=this@entry=0x278c180, receiver=receiver@entry=0x3281610, e=e@entry=0x7ffcb84928b0) at kernel/qapplication.cpp:4570
#28 0x00007fd03bb324d8 in QApplication::notify (this=this@entry=0x7ffcb8494ca0, receiver=receiver@entry=0x3281610, e=e@entry=0x7ffcb84928b0) at kernel/qapplication.cpp:4356
#29 0x00007fd03d71cb4a in KApplication::notify (this=0x7ffcb8494ca0, receiver=0x3281610, event=0x7ffcb84928b0) at ../../kdeui/kernel/kapplication.cpp:311
#30 0x00007fd03ca6117d in QCoreApplication::notifyInternal (this=0x7ffcb8494ca0, receiver=0x3281610, event=event@entry=0x7ffcb84928b0) at kernel/qcoreapplication.cpp:955
#31 0x00007fd03ca90e38 in sendEvent (event=0x7ffcb84928b0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#32 socketNotifierSourceDispatch (source=0x277c3b0) at kernel/qeventdispatcher_glib.cpp:117
#33 0x00007fd0368f6c3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fd0368f6f20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fd0368f6fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fd03ca9080e in QEventDispatcherGlib::processEvents (this=0x26dae90, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#37 0x00007fd03bbd3c66 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007fd03ca5fcd1 in QEventLoop::processEvents (this=this@entry=0x7ffcb8492b10, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007fd03ca60035 in QEventLoop::exec (this=this@entry=0x7ffcb8492b10, flags=...) at kernel/qeventloop.cpp:204
#40 0x00007fd03c005d5c in QDialog::exec (this=this@entry=0x3306db0) at dialogs/qdialog.cpp:562
#41 0x0000000000529c68 in K3b::JobProgressDialog::startJob (this=0x3306db0, job=<optimized out>) at /build/buildd/k3b-2.0.3/src/k3bjobprogressdialog.cpp:624
#42 0x00000000004bb7c8 in K3b::ProjectBurnDialog::slotStartClicked (this=0x2f36720) at /build/buildd/k3b-2.0.3/src/projects/k3bprojectburndialog.cpp:234
#43 0x000000000048ec68 in K3b::DataBurnDialog::slotStartClicked (this=0x2f36720) at /build/buildd/k3b-2.0.3/src/projects/k3bdataburndialog.cpp:205
#44 0x0000000000534d95 in K3b::InteractionDialog::slotStartClickedInternal (this=this@entry=0x2f36720) at /build/buildd/k3b-2.0.3/src/k3binteractiondialog.cpp:312
#45 0x0000000000535720 in K3b::InteractionDialog::qt_static_metacall (_o=0x2f36720, _id=<optimized out>, _a=0x7ffcb8493030, _c=<optimized out>) at /build/buildd/k3b-2.0.3/obj-x86_64-linux-gnu/src/k3binteractiondialog.moc:137
#46 0x00007fd03ca7619c in QMetaObject::activate (sender=sender@entry=0x32f5290, m=m@entry=0x7fd03c6478e0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffcb8493030) at kernel/qobject.cpp:3567
#47 0x00007fd03c1c42f2 in QAbstractButton::clicked (this=this@entry=0x32f5290, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:219
#48 0x00007fd03bf01533 in QAbstractButtonPrivate::emitClicked (this=this@entry=0x32f6e40) at widgets/qabstractbutton.cpp:548
#49 0x00007fd03bf028e4 in QAbstractButtonPrivate::click (this=this@entry=0x32f6e40) at widgets/qabstractbutton.cpp:541
#50 0x00007fd03bf029f4 in QAbstractButton::mouseReleaseEvent (this=0x32f5290, e=0x7ffcb8493590) at widgets/qabstractbutton.cpp:1123
#51 0x00007fd03bb7edc8 in QWidget::event (this=0x32f5290, event=0x7ffcb8493590) at kernel/qwidget.cpp:8775
#52 0x00007fd03bb2b9bc in QApplicationPrivate::notify_helper (this=this@entry=0x278c180, receiver=receiver@entry=0x32f5290, e=e@entry=0x7ffcb8493590) at kernel/qapplication.cpp:4570
#53 0x00007fd03bb3263f in QApplication::notify (this=this@entry=0x7ffcb8494ca0, receiver=receiver@entry=0x32f5290, e=e@entry=0x7ffcb8493590) at kernel/qapplication.cpp:4113
#54 0x00007fd03d71cb4a in KApplication::notify (this=0x7ffcb8494ca0, receiver=0x32f5290, event=0x7ffcb8493590) at ../../kdeui/kernel/kapplication.cpp:311
#55 0x00007fd03ca6117d in QCoreApplication::notifyInternal (this=0x7ffcb8494ca0, receiver=receiver@entry=0x32f5290, event=event@entry=0x7ffcb8493590) at kernel/qcoreapplication.cpp:955
#56 0x00007fd03bb31c9f in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#57 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x32f5290, event=event@entry=0x7ffcb8493590, alienWidget=alienWidget@entry=0x32f5290, nativeWidget=nativeWidget@entry=0x3272ae0, buttonDown=buttonDown@entry=0x7fd03c659578 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3178
#58 0x00007fd03bbab9a2 in QETWidget::translateMouseEvent (this=this@entry=0x3272ae0, event=event@entry=0x7ffcb84938f0) at kernel/qapplication_x11.cpp:4632
#59 0x00007fd03bbab24c in QApplication::x11ProcessEvent (this=0x7ffcb8494ca0, event=event@entry=0x7ffcb84938f0) at kernel/qapplication_x11.cpp:3626
#60 0x00007fd03bbd3ba2 in x11EventSourceDispatch (s=0x277c200, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#61 0x00007fd0368f6c3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#62 0x00007fd0368f6f20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#63 0x00007fd0368f6fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#64 0x00007fd03ca9080e in QEventDispatcherGlib::processEvents (this=0x26dae90, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#65 0x00007fd03bbd3c66 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#66 0x00007fd03ca5fcd1 in QEventLoop::processEvents (this=this@entry=0x7ffcb8493ce0, flags=...) at kernel/qeventloop.cpp:149
#67 0x00007fd03ca60035 in QEventLoop::exec (this=this@entry=0x7ffcb8493ce0, flags=...) at kernel/qeventloop.cpp:204
#68 0x00007fd03c005d5c in QDialog::exec (this=this@entry=0x2f36720) at dialogs/qdialog.cpp:562
#69 0x0000000000535267 in K3b::InteractionDialog::exec (this=this@entry=0x2f36720) at /build/buildd/k3b-2.0.3/src/k3binteractiondialog.cpp:526
#70 0x00000000004bb168 in K3b::ProjectBurnDialog::execBurnDialog (this=this@entry=0x2f36720, burn=burn@entry=true) at /build/buildd/k3b-2.0.3/src/projects/k3bprojectburndialog.cpp:170
#71 0x0000000000488e1c in K3b::DataView::slotBurn (this=<optimized out>) at /build/buildd/k3b-2.0.3/src/projects/k3bdataview.cpp:138
#72 0x00007fd03ca7619c in QMetaObject::activate (sender=sender@entry=0x2aafff0, m=m@entry=0x7fd03c620540 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffcb8493f00) at kernel/qobject.cpp:3567
#73 0x00007fd03bb24fd2 in QAction::triggered (this=this@entry=0x2aafff0, _t1=false) at .moc/release-shared/moc_qaction.cpp:276
#74 0x00007fd03bb26b57 in QAction::activate (this=0x2aafff0, event=<optimized out>) at kernel/qaction.cpp:1257
#75 0x00007fd03bf028a3 in QAbstractButtonPrivate::click (this=this@entry=0x3249e00) at widgets/qabstractbutton.cpp:530
#76 0x00007fd03bf029f4 in QAbstractButton::mouseReleaseEvent (this=0x3133750, e=0x7ffcb8494470) at widgets/qabstractbutton.cpp:1123
#77 0x00007fd03bfc4ada in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:723
#78 0x00007fd03bb7edc8 in QWidget::event (this=0x3133750, event=0x7ffcb8494470) at kernel/qwidget.cpp:8775
#79 0x00007fd03bb2b9bc in QApplicationPrivate::notify_helper (this=this@entry=0x278c180, receiver=receiver@entry=0x3133750, e=e@entry=0x7ffcb8494470) at kernel/qapplication.cpp:4570
#80 0x00007fd03bb3263f in QApplication::notify (this=this@entry=0x7ffcb8494ca0, receiver=receiver@entry=0x3133750, e=e@entry=0x7ffcb8494470) at kernel/qapplication.cpp:4113
#81 0x00007fd03d71cb4a in KApplication::notify (this=0x7ffcb8494ca0, receiver=0x3133750, event=0x7ffcb8494470) at ../../kdeui/kernel/kapplication.cpp:311
#82 0x00007fd03ca6117d in QCoreApplication::notifyInternal (this=0x7ffcb8494ca0, receiver=receiver@entry=0x3133750, event=event@entry=0x7ffcb8494470) at kernel/qcoreapplication.cpp:955
#83 0x00007fd03bb31c9f in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#84 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x3133750, event=event@entry=0x7ffcb8494470, alienWidget=alienWidget@entry=0x3133750, nativeWidget=nativeWidget@entry=0x2a6bd70, buttonDown=buttonDown@entry=0x7fd03c659578 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3178
#85 0x00007fd03bbab9a2 in QETWidget::translateMouseEvent (this=this@entry=0x2a6bd70, event=event@entry=0x7ffcb84947d0) at kernel/qapplication_x11.cpp:4632
#86 0x00007fd03bbab24c in QApplication::x11ProcessEvent (this=0x7ffcb8494ca0, event=event@entry=0x7ffcb84947d0) at kernel/qapplication_x11.cpp:3626
#87 0x00007fd03bbd3ba2 in x11EventSourceDispatch (s=0x277c200, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#88 0x00007fd0368f6c3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#89 0x00007fd0368f6f20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#90 0x00007fd0368f6fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#91 0x00007fd03ca9080e in QEventDispatcherGlib::processEvents (this=0x26dae90, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#92 0x00007fd03bbd3c66 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#93 0x00007fd03ca5fcd1 in QEventLoop::processEvents (this=this@entry=0x7ffcb8494bb0, flags=...) at kernel/qeventloop.cpp:149
#94 0x00007fd03ca60035 in QEventLoop::exec (this=this@entry=0x7ffcb8494bb0, flags=...) at kernel/qeventloop.cpp:204
#95 0x00007fd03ca65ab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1227
#96 0x00007fd03bb29c1c in QApplication::exec () at kernel/qapplication.cpp:3828
#97 0x0000000000444b26 in main (argc=<optimized out>, argv=<optimized out>) at /build/buildd/k3b-2.0.3/src/main.cpp:165

Possible duplicates by query: bug 327658.

Reported using DrKonqi
Comment 1 Leslie Zhai 2016-09-12 09:22:23 UTC
> #11 0x00007fd041946e7b in K3b::DataJob::waitForBurnMedium (this=this@entry=0x3331430) at /build/buildd/k3b-2.0.3/libk3b/projects/datacd/k3bdatajob.cpp:818

Nice bug hunter!
Comment 2 Leslie Zhai 2016-09-12 09:23:39 UTC
Git commit 390ddfa2eeb3406b48b958c960aed45e2831627f by Leslie Zhai.
Committed on 12/09/2016 at 09:22.
Pushed by lesliezhai into branch 'master'.

Fix crash on write start.

There are a lot of unchecking binOjbect is nullptr issues in k3b-2.0.3!

M  +3    -2    libk3b/projects/datacd/k3bdatajob.cpp
M  +9    -0    tests/CMakeLists.txt
A  +35   -0    tests/k3bexternalbinmanagertest.cpp     [License: GPL (v2+)]
A  +27   -0    tests/k3bexternalbinmanagertest.h     [License: GPL (v2+)]

http://commits.kde.org/k3b/390ddfa2eeb3406b48b958c960aed45e2831627f