Fix crash on write start.

There are a lot of unchecking binOjbect is nullptr issues in k3b-2.0.3!

BUG: 346412